tests/NormalTests/paczka1/fuzzy1/99978588.err
Error in line 22: jhlzmHzGS S942 94,2
Error in line 23: jhlzmHzGS S424 72,7
